--- a/index.html
+++ b/index.html
@@ -1,97 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="pb.bank : A starter online banking application built with Worklight, Angular and Bluemix services">
-	
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <title>pb.bank app test by Adam-Michal-Prague</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>pb.bank - introduction and info</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/paolob67/pb.bank">View on GitHub</a>
+      <header>
+        <h1>pb.bank app test</h1>
+        <p>A starter online banking application built with Worklight, Angular and Bluemix services</p>
+      </header>
 
-          <h1 id="project_title">pb.bank</h1>
-          <h2 id="project_tagline">A starter online banking application built with Worklight, Angular and Bluemix services</h2>
-            <section id="navigation">
-              <table>
-                <tr>
-                  <td><strong><font color="#f2f2f2">Intro and info</font></strong></td>
-                  <td><a href="./overview.html">Overview</a></td>
-                  <td><a href="./application.html">Application</a></td>
-                  <td><a href="./sourcedoc/index.html">SourceDoc</a></td>
-                </tr>
-              </table>
-            </section>
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/paolob67/pb.bank/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/paolob67/pb.bank/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+      <div id="banner">
+        <span id="logo"></span>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-            <section id="social">
-				<ul class="share-buttons">
-					<li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fpaolob67.github.io%2Fpb.bank%2Findex.html&t=pb.bank%20-%20A%20starter%20online%20banking%20application%20built%20with%20Worklight%2C%20Angular%20and%20Bluemix%20services" target="_blank"><img src="images/flat_web_icon_set/color/Facebook.png"></a></li>
-					<li><a href="https://plus.google.com/share?url=http%3A%2F%2Fpaolob67.github.io%2Fpb.bank%2Findex.html" target="_blank" title="Share on Google+"><img src="images/flat_web_icon_set/color/Google+.png"></a></li>
-					<li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fpaolob67.github.io%2Fpb.bank%2Findex.html&title=pb.bank%20-%20A%20starter%20online%20banking%20application%20built%20with%20Worklight%2C%20Angular%20and%20Bluemix%20services&summary=When%20creating%20a%20new%20application%20within%20IBM%20Worklight%20Studio%2C%20the%20developer%20is%20given%20a%20choice%20of%20configuring%20three%20javascript%20libraries%3A%20jQuerymobile%2C%20Dojo%2C%20Sencha%20Touch.%20When%20it%20comes%20to%20using%20AngularJS%20this%20starter%20app%20can%20save%20you%20lots%20of%20time.&source=http%3A%2F%2Fpaolob67.github.io%2Fpb.bank%2Findex.html" target="_blank" title="Share on LinkedIn"><img src="images/flat_web_icon_set/color/LinkedIn.png"></a></li>
-				</ul>			
-            </section>
+        <a href="https://github.com/Adam-Michal-Prague/pb.bank" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/Adam-Michal-Prague/pb.bank/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/Adam-Michal-Prague/pb.bank/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <h3>
-        <a id="an-ibm-worklight-starter-app" class="anchor" href="#an-ibm-worklight-starter-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>An IBM Worklight starter app</h3>
+<a id="an-ibm-worklight-starter-app" class="anchor" href="#an-ibm-worklight-starter-app" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An IBM Worklight starter app</h3>
 
-          <p>When creating a new application within IBM Worklight Studio, the developer is given a choice of configuring out of three javascript libraries: jQuerymobile, Dojo, Sencha Touch. In recent times, my job as an IT Architect supporting mobile development projects has given me the opportunity to come across several Business Partners interested in using other javascript frameworks than those proposed by the product. AngularJS is one framework that is getting a lot of attention from application developers.</p>
-          <p>Without doubt, the use of AngularJS has its advantages and, if implemented correctly, the resulting application can take full benefit of the IBM Worklight Foundation services. Application security and fast integration with back-end systems stand out among those benefits. Moreover, but the platform delivers added value in providing an integrated platform that includes a comprehensive development environment, mobile-optimized runtime middleware, a private enterprise application store, and an integrated management and analytics console, all supported by various security mechanisms.</p>
-          <p>On the down side, writing an application with AngularJS and taking full advantages of the benefits of the platform might need a little bit of trial and error before the developer is able to find the correct implementation. <strong>PB.BANK</strong> is a starter hybrid application built on IBM Worklight leveraging the AngularJS framework and IBM Bluemix to host backend services. It is built on the <em>online banking</em> paradigm but its purpose is just to show how several functionalities can be easily achieved by leveraging the tools available. </p>
-		  <p><img src="./images/welcome.png"></p>
-        <h3>
-        <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>When creating a new application within IBM Worklight Studio, the developer is given a choice of configuring three javascript libraries: jQuerymobile, Dojo, Sencha Touch. In recent times, my job as an IT Architect supporting mobile development projects has given me the opportunity to come across several Business Partners interested in using Angular as their framework for developing hybrid applications.
+Without doubt, the use of Angular has its advantages and, if implemented correctly, the resulting application can take full benefit of the IBM Worklight Foundation services. Application security and fast integration with back-end systems stand out among those benefits. Moreover, but the platform delivers added value in providing an integrated platform that includes a comprehensive development environment, mobile-optimized runtime middleware, a private enterprise application store, and an integrated management and analytics console, all supported by various security mechanisms. 
+On the down side, writing an application with Angular and taking full advantages of the benefits of the platform might need a little bit of trial and error before the developer is able to find the correct implementation. <strong>PB.BANK</strong> is a starter hybrid application built on IBM Worklight leveraging the AngularJS framework and IBM Bluemix to host backend services. It is built on the <em>online banking</em> paradigm but its purpose is just to show how several functionalities can be easily achieved by leveraging the tools available. </p>
 
-          <p>Paolo Bianchini (<a href="https://github.com/paolob67" class="user-mention">@paolob67</a>) is a Senior Architect, Technical Leader at IBM. Check out his <a href="http://it.linkedin.com/in/paolobianchini/">linkedin profile</a>.</p>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-        <h3>
-        <a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h3>
+<p>Paolo Bianchini (<a href="https://github.com/paolob67" class="user-mention">@paolob67</a>) is a Senior Architect, Technical Leader at IBM. Check out his <a href="http://it.linkedin.com/in/paolobianchini/">linkedin profile</a></p>
 
-        <ul>
-          <li><a href="https://www.ibm.com/developerworks/community/blogs/worklight/entry/building_worklight_applications_with_angularjs?lang=en">Building Worklight Applications with AngularJS</a> - by <a href="https://www.ibm.com/developerworks/community/profiles/html/profileView.do?userid=270005D80F">Anton Aleksandrov</a>.</li>
-          <li><a href="https://github.com/angular/angular-seed">angular-seed</a> — the seed for AngularJS apps by <a href="https://github.com/petebacondarwin">Pete Bacon Darwin</a>.</li>
-		  <li><a href="https://www.ibm.com/developerworks/cloud/library/cl-rapiddev-app/">Create back-end cloud services on IBM Bluemix to build mobile and web apps quickly</a> - by <a href="https://www.ibm.com/developerworks/community/profiles/html/profileView.do?key=e235451e-4efd-4482-93ec-7b7c44105156&lang=en&tabid=dwAboutMe">Andrew Das</a>.</li>
-          <li><a href="http://www-03.ibm.com/software/products/en/mobilefirstfoundation">IBM® MobileFirst Platform Foundation</a> - helps organizations extend their business to mobile devices.</li>
-          <li><a href="https://cloudant.com">IBM Cloudant</a> - a NoSQL database as a service (DBaaS).</li>
-          <li><a href="https://ace.ng.bluemix.net">IBM Bluemix</a> - an open-standards, cloud-based platform for building, managing, and running apps of all types.</li>
-          <li><a href="https://angularjs.org">AngularJS</a> - a structural framework for dynamic web apps.</li>
-          <li><a href="http://getbootstrap.com">Bootstrap</a> - HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.</li>
-          <li><a href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a> - native AngularJS directives based on Bootstrap's markup and CSS without dependencies on jQuery or Bootstrap's JavaScript.</li>
-		  <li><a href="http://www.highcharts.com">Highcharts</a> - a charting library written in pure JavaScript.</li>
-          <li><a href="https://code.google.com/p/crypto-js/">Crypto-JS</a> - a growing collection of standard and secure cryptographic algorithms implemented in JavaScript.</li>
-          <li><a href="http://placehold.it">Placehold.it</a> - a quick and simple image placeholder service.</li>
-        </ul>
+<h3>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h3>
 
-        <h3>
-          <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li><a href="https://angularjs.org">AngularJS</a></li>
+<li><a href="http://getbootstrap.com">Bootstrap</a></li>
+<li><a href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li>
+<li><a href="https://code.google.com/p/crypto-js/">Crypto-JS</a></li>
+</ul>
 
-            <p>Having trouble with this sample application? Check out the source code <a href="./sourcedoc/index.html">documentation</a>, file an <a href="https://github.com/paolob67/pb.bank/issues">issue</a> or contribute to the development. Still need help? Try getting in touch with me via Linkedin.</p>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">pb.bank maintained by <a href="https://github.com/paolob67">paolob67</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/Adam-Michal-Prague">Adam-Michal-Prague</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
